--- a/package.json
+++ b/package.json
@@ -1,5 +1,26 @@
 {
   "dependencies": {
-    "mysql": "^2.18.1"
-  }
+    "dotenv": "^16.0.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.2.4",
+    "nodemon": "^2.0.22"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KingLyrics/NODEJS-CRUD.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KingLyrics/NODEJS-CRUD/issues"
+  },
+  "homepage": "https://github.com/KingLyrics/NODEJS-CRUD#readme",
+  "description": ""
 }
